sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:3: error: not found: value i
  while(i+ecart < getNombreValeurs()){
        ^AlgCombSort11:3: error: not found: value ecart
  while(i+ecart < getNombreValeurs()){
          ^AlgCombSort11:4: error: not found: value i
      if (!plusPetit(i,i+ecart)){
                     ^AlgCombSort11:4: error: not found: value i
      if (!plusPetit(i,i+ecart)){
                       ^AlgCombSort11:4: error: not found: value ecart
      if (!plusPetit(i,i+ecart)){
                         ^AlgCombSort11:5: error: not found: value i
        echange (i,i+ecart)
                 ^AlgCombSort11:5: error: not found: value i
        echange (i,i+ecart)
                   ^AlgCombSort11:5: error: not found: value ecart
        echange (i,i+ecart)
                     ^AlgCombSort11:6: error: not found: value i
        i +=1
        ^