sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  while(i+ecart < getNombreValeurs()){
      if (!plusPetit(i,i+ecart)){
        echange (i,i+ecart)
        i +=1
      }
    }
}